# MIS

./: CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  build.rs
config/: config.toml
docs/: architecture.md  whitepaper_extended_en.md
docs/translations/: README_translations.md  glossary.md
ebpf/: mis_lsm.c
paper/: mis_paper.tex
policy_engine/: main.rs
proto/: policy.proto
reference_implementation/config/: mis_final_config.toml
reference_implementation/ebpf/: mis_lsm.c
src/: config.rs  defcon_monitor.rs  grpc_server.rs  kill_manager.rs  learning.rs  main.rs  policy.rs
