[package]
name = "mis-policy-engine"
version = "2.0.0"
edition = "2021"
authors = ["defis <xoomi16@gmail.com>"]
description = "MIS Policy Engine v2.0 - Enhanced userspace security decision engine with gRPC"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "mis-policy-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "signal"] }
anyhow = "1.0"
libbpf-rs = "0.22"
libbpf-sys = "1.3"
sha2 = "0.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# gRPC dependencies (NEW in v2.0)
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Process management (NEW in v2.0)
nix = { version = "0.27", features = ["signal", "process"] }

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
